2018-02-28 Alexander Malysh <amalysh at kannel.org>
    * added support for openssl version > 1.1

2018-02-14 Alexander Malysh <amalysh at kannel.org>
    * test/test_http.c: fixed compilation error.

2018-02-14 Alexander Malysh <amalysh at kannel.org>
    * configure.in: fixed deprecation warnings.

2018-01-17 Alexander Malysh <amalysh at kannel.org>
    * updated Copyright year.

2018-01-17 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed copy & paste error. This fixes #773.

2017-11-29 Alexander Malysh <amalysh at kannel.org>
    * configure: moved utils compile to extra Makefile.am and fixed conditional
      make for start-stop-daemon.

2017-11-21 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed copy & paste error. This fixes #772.

2017-11-21  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document hard-coded 'data_coding' value
      for SMPP's meta-data group.
      
2017-10-13  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'const' directive in context
      group 'smpp-tlv'.
    * gw/smsc/smpp_pdu.[ch]: implement smpp_tlv_add_constant() to add any
      configured constant values if the corresponding TLV values have not been
      set via the meta-data part.
    * gw/smsc/smsc_smpp.c: call smpp_tlv_add_constant() to set contant values.
    * gwlib/cfg.def: add 'const' to 'group = smpp-tlv'.
    
2017-09-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: fix segfaulting when under high load and stopping
      redis-server connections.

2017-07-19 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: Fixed sending of long messages.
      This fixes #769.

2017-06-16  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for config directives
      'ssl-[client|server]-cipher-list'.
    * gwlib/cfg.def: add above config directives to 'group = core'.